src/objects/vlocity_ins__ObjectFacet__c.object
<CustomObject>
    <description>Represents a facet of an object or object type layout. Facets display as the first level of grouping in the page layout such as a tab or a left-side navigational link.</description>
    <fields>
        <fullName>vlocity_ins__EffectiveFromDate__c</fullName>
        <label>Effective From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__EffectiveUntilDate__c</fullName>
        <label>Effective Until</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__FacetId__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Facet</label>
        <referenceTo>vlocity_ins__UiFacet__c</referenceTo>
        <relationshipLabel>Vlocity Object Facets</relationshipLabel>
        <relationshipName>VlocityObjectFacets</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__GlobalKey__c</fullName>
        <description>The globally unique identifier of this object facet. Used to identify the object facet across Salesforce instances and potentially within other systems. Vlocity uses a UUID as described in http://en.wikipedia.org/wiki/Universally_unique_identifier, but when migrated from other initiating systems, any globally unique object facet identifier can be used.</description>
        <externalId>true</externalId>
        <label>Global Key</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ObjectLayoutId__c</fullName>
        <label>Object Layout</label>
        <referenceTo>vlocity_ins__ObjectLayout__c</referenceTo>
        <relationshipLabel>Vlocity Object Facets</relationshipLabel>
        <relationshipName>VlocityObjectFacets</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Vlocity Object Facet</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <columns>NAME</columns>
        <columns>vlocity_ins__Sequence__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>vlocity_ins__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>ObjectFacet Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Object Facets</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>